--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.25.1",
+    "@tanstack/router-plugin": "^1.117.2",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "copy-webpack-plugin": "^13.0.0",
@@ -34,6 +35,7 @@
     "webpack-dev-server": "^5.2.1"
   },
   "dependencies": {
+    "@tanstack/react-router": "^1.117.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
