--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@tanstack/router-plugin": "^1.117.2",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@vanilla-extract/webpack-plugin": "^2.3.18",
     "copy-webpack-plugin": "^13.0.0",
+    "css-loader": "^7.1.2",
     "eslint": "^9.25.1",
     "eslint-config-prettier": "^10.1.2",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -26,6 +28,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "html-webpack-plugin": "^5.6.3",
+    "mini-css-extract-plugin": "^2.9.2",
     "prettier": "3.5.3",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.3",
@@ -36,6 +39,7 @@
   },
   "dependencies": {
     "@tanstack/react-router": "^1.117.1",
+    "@vanilla-extract/css": "^1.17.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
