--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "webpack-dev-server": "^5.2.1"
   },
   "dependencies": {
+    "@radix-ui/colors": "^3.0.0",
     "@tanstack/react-router": "^1.117.1",
     "@vanilla-extract/css": "^1.17.1",
     "react": "^19.1.0",
