--- a/package.json
+++ b/package.json
@@ -38,9 +38,12 @@
     "webpack-dev-server": "^5.2.1"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "@radix-ui/colors": "^3.0.0",
     "@tanstack/react-router": "^1.117.1",
     "@vanilla-extract/css": "^1.17.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
