--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "@radix-ui/colors": "^3.0.0",
+    "@tanstack/react-query": "^5.79.0",
     "@tanstack/react-router": "^1.117.1",
     "@vanilla-extract/css": "^1.17.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
