--- a/package.json
+++ b/package.json
@@ -4,38 +4,34 @@
   "description": "Random says: Potato wedges probably are not best for relationships.",
   "main": "index.js",
   "scripts": {
-    "format": "prettier --write .",
-    "build": "webpack --mode production --config webpack.config.mjs",
-    "dev": "webpack serve --open",
+    "format": "prettier --write src/**",
+    "build": "vite build --logLevel warn",
+    "start": "vite preview --port 8080",
+    "dev": "vite --port 8080",
     "lint": "eslint --ext .ts,.tsx src/",
     "lint:error": "eslint --ext .ts,.tsx src/ --quiet",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "typecheck": "tsc --noEmit"
   },
   "license": "ISC",
   "devDependencies": {
-    "@eslint/js": "^9.25.1",
+    "@eslint/js": "^9.39.0",
     "@tanstack/router-plugin": "^1.117.2",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "@vanilla-extract/webpack-plugin": "^2.3.18",
-    "copy-webpack-plugin": "^13.0.0",
-    "css-loader": "^7.1.2",
-    "eslint": "^9.25.1",
-    "eslint-config-prettier": "^10.1.2",
+    "@vanilla-extract/vite-plugin": "^5.1.1",
+    "@vitejs/plugin-react": "^5.1.0",
+    "eslint": "^9.39.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "html-webpack-plugin": "^5.6.3",
-    "mini-css-extract-plugin": "^2.9.2",
-    "prettier": "3.5.3",
-    "ts-loader": "^9.5.2",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "prettier": "3.6.2",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.31.0",
-    "webpack": "^5.99.6",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.1"
+    "typescript-eslint": "^8.46.2",
+    "vite": "^7.1.12",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
